[package]
name = "idata"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_abi = { git = "https://github.com/paritytech/ink", package = "ink_abi", default-features = false, features = ["derive"], optional = true }
ink_primitives = { git = "https://github.com/paritytech/ink", package = "ink_primitives", default-features = false }
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", package = "ink_lang", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", package = "ink_prelude", default-features = false }

scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }

[lib]
name = "idata"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["test-env"]
std = [
    "ink_primitives/std",
    "ink_abi/std",
    "ink_core/std",
    "ink_lang/std",
    "scale/std",
    "type-metadata/std",
]
test-env = [
    "std",
    "ink_lang/test-env",
    "type-metadata/std",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",
    "ink_lang/ink-generate-abi",
]
ink-as-dependency = []
